# ACCESS-MOPPeR

./: ACDD_conf.yaml  CMIP6_conf.yaml  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mopper-conda-release.yaml  mopper-pytest.yaml  mopper-test-calcs.yaml  mopper-test-conda.yaml
conda/: environment.yaml  meta.yaml
conda-test/: meta.yaml  run_test.sh  run_test_coverage.sh  testenv.yaml
docs/: cmip.rst  cmor_conf.yaml  mopdb_command.rst  output.rst  overview.rst
mappings/: map_AUS2200.csv  map_aerosol_AM3.csv  map_aerosol_CM2.csv  map_atmos_AM3.csv  map_atmos_CM2.csv  map_atmos_ESM1.5.csv  map_land_AM3.csv  map_land_CM2.csv  map_land_ESM1.5.csv  map_ocean_CM2.csv  map_ocean_ESM1.5.csv  map_ocean_OM2.csv  map_seaice_CM2.csv
src/mopdata/: access.db  access_dump.sql  update_db.py.txt
src/mopdata/cmor_tables/: ACDD_coordinate.json  ACDD_formula_terms.json  ACDD_grids.json  AM3_A1hrClimMon.json  AM3_Amon.json  AUS2200_A10min.json  AUS2200_A1hr.json  AUS2200_A1hrPlev.json  AUS2200_A3hr.json  AUS2200_A6hr.json  AUS2200_Aday.json  AUS2200_fx.json  CM2_3hr.json  CM2_6hr.json  CM2_day.json  CM2_mon.json  CMIP6_coordinate.json  CMIP6_formula_terms.json  CMIP6_grids.json  MIP_coordinate.json  MIP_formula_terms.json  MIP_grids.json
src/mopdb/: mopdb.py  mopdb_class.py  mopdb_map.py  mopdb_utils.py  utils.py
src/mopper/: calc_atmos.py  calc_land.py  calc_ocean.py  calc_seaice.py  calc_utils.py  mop_setup.py  mop_utils.py  mopper.py  setup_utils.py
tests/: pytest.ini  test_calculations.py  test_mop_utils.py  test_setup_utils.py
